--- a/README.md.tmp.html
+++ b/README.md.tmp.html
@@ -7,7 +7,7 @@
 
 <hr />
 
-<div>
+<div style="padding: 16;">
     <div style="float: right">
         <a href="slides/highschool.md">Next</a>
     </div>
