--- a/slides/highschool.md.tmp.html
+++ b/slides/highschool.md.tmp.html
@@ -16,11 +16,11 @@
 
 <hr />
 
-<div>
+<div style="padding: 16;">
     <div style="float: left">
         <a href="../README.md">Prev</a>
     </div>
     <div style="float: right">
-        <a href="slides/highschool.md">Next</a>
+        <a href="slides/highschool">Next</a>
     </div>
 </div>
