--- a/slides/interviews.md.tmp.html
+++ b/slides/interviews.md.tmp.html
@@ -1,17 +1,11 @@
 <meta charset="UTF-8">
-<h2>College</h2>
+<h2>Interviews</h2>
 
 <ul>
-<li>Classes</li>
-<li>Clubs</li>
-<li>Game Developers</li>
-</ul>
-
-<h2>Internship</h2>
-
-<ul>
-<li>College</li>
-<li>iOS</li>
+<li>Apple</li>
+<li>Amazon</li>
+<li>Facebook</li>
+<li>Capital One</li>
 </ul>
 
 <hr />
@@ -21,6 +15,6 @@
         <a href="../README.md">Prev</a>
     </div>
     <div style="float: right">
-        <a href="slides/swift.md">Next</a>
+        <a href="slides/timeline.md">Next</a>
     </div>
 </div>
