--- a/slides/highschool.md.tmp.html
+++ b/slides/highschool.md.tmp.html
@@ -1,10 +1,17 @@
 <meta charset="UTF-8">
-<h2>Internship</h2>
+<h2>Computer Classes</h2>
 
 <ul>
-<li>Highschool</li>
-<li>bioinformatics </li>
-<li>game development</li>
+<li>Java</li>
+<li>AP Computer Science</li>
+<li>Independent Study (1 year)</li>
+</ul>
+
+<h2>UNO Summer Internships</h2>
+
+<ul>
+<li>Bioinformatics </li>
+<li>Game Development</li>
 </ul>
 
 <h2>iOS</h2>
@@ -21,6 +28,6 @@
         <a href="../README.md">Prev</a>
     </div>
     <div style="float: right">
-        <a href="slides/highschool">Next</a>
+        <a href="slides/internships.html">Next</a>
     </div>
 </div>
